--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,26 @@
     <string name="txtemail">Email</string>
     <string name="txtpass">Password</string>
     <string name="btnIngresar">Ingresar</string>
+    <string name="title_activity_navigation">NavigationActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Daniel Delgado</string>
+    <string name="nav_header_subtitle">danieldd.93@gmail.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Cotizador</string>
+    <string name="menu_gallery">Servicios</string>
+    <string name="menu_slideshow">Clientes</string>
+    <string name="btCalcular">Calcular\n</string>
+    <string name="btncalcular">Calcular</string>
+    <string name="nuestrosServicios">Nuestro Servicios</string>
+    <string name="txtclientes">Clientes</string>
+    <string-array name="servicios_array">
+        <item>Seleccione el servicio</item>
+        <item>Cambio de aceite</item>
+        <item>Mantenimiento Correctivo</item>
+        <item>Alineamiento de dirección</item>
+        <item>Cambio de frenos</item>
+    </string-array>
 </resources>
